--- a/views/submit.hbs
+++ b/views/submit.hbs
@@ -86,7 +86,7 @@
 	<br>
 	<br>
 	<center>
-		<a href="/cart">See cart</a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="/main">Check other dishes</a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="/logout">Logout</a>
 	</center>
   
