Better order confirmation mail and order cancellation feature added

--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -159,9 +159,11 @@
         <input type="text" id="state" name="state" placeholder="Delivery state (Click Find My Location button to detect automatically)" readonly required>
         <hr>
         <h2>Billing date and time</h2>
-        <label>Date:</label>
+        <label>Ordering Date:</label>
         <input type="text" id="currentdate" name="order_date" readonly>
-      	<label>Time:</label>
+        <label>Delivery Date: <input required name="date" value="Today" readonly>
+        </label>
+      	<label>Delivery Time:</label>
         <input type="text" name="time" id="demo" readonly>
         <hr>
         <h2>Billing payment type</h2>
