fixed logout issue and added myorders screen

--- a/views/fav.hbs
+++ b/views/fav.hbs
@@ -25,6 +25,7 @@
 	    		<li><a href="/profile"><font color="blank">Profile</a></li>
 	    		<li><a href="/cart"><font color="blank">Cart</a></li>
 				<li><a href="/fav"><font color="blank">Favourites</a></li>
+        <li><a href="/myorders" target="blank"><font color="blank">Orders</font></a></li>
 	    		<li><a href="/logout" target="blank"><font color="blank">Logout!</font></a></li>
 	    	</ul>
 	    </div>
