--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -25,7 +25,8 @@
 	    		<li><a href="/profile"><font color="blank">Profile</a></li>
 	    		<li><a href="/cart"><font color="blank">Cart</a></li>
 				<li><a href="/fav"><font color="blank">Favourites</a></li>
-	    		<li><a href="/logout" target="blank"><font color="blank">Logout!</font></a></li>
+	    	<li><a href="/myorders" target="blank"><font color="blank">Orders</font></a></li>
+        	<li><a href="/logout" target="blank"><font color="blank">Logout!</font></a></li>
 	    	</ul>
 	    </div>
 	<p style="margin-left: 6px;margin-top: 10px;"><font color="#e33745"><a href="/index">Home</a> > <a href="/main">Dishes</a> > Cart</font></p>
