--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -23,8 +23,9 @@
 	    		<li><a href="/profile"><font color="blank">Profile</a></li>
 	    		<li><a href="/cart"><font color="blank">Cart</a></li>
 				<li><a href="/fav"><font color="blank">Favourites</a></li>
+				<li><a href="/myorders" target="blank"><font color="blank">Orders</font></a></li>
 	    		<li><a href="/logout" target="blank"><font color="blank">Logout!</font></a></li>
-	    	</ul>
+			</ul>
 	    </div>
 <p><a href="/index">Home</a> > <a href="/main">Dishes</a> > Profile</p>
 		</div>
