ui fix for sessional messages

--- a/views/submit.hbs
+++ b/views/submit.hbs
@@ -79,7 +79,7 @@
 		<div class="text">
 			
 				<p align="center"><strong>PAYMENT SUCCESS</strong></p>
-				<p align="center"><strong>For security purposes we would send your order via email and not display on the site. Your order details (except the card details) is stored in our datebase and would reach to you on the specified date and time.</strong></p>
+				<p align="center"><strong>For security purposes we would send your order items via email and not display on the site. Your order details (except the card details) is stored in our datebase and would reach to you on the specified date and time.</strong></p>
 	    </div>
         
 	</div>
@@ -87,6 +87,7 @@
 	<br>
 	<center>
 		<a href="/main">Check other dishes</a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="/myorders">View your orders</a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="/logout">Logout</a>
 	</center>
   
